--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,7 @@ body.calendar {
 .uk-navbar {
   background-color: #343434 !important; }
 
-.logo {
-  width: 18%;
-  height: 75%; }
-
-.uk-navbar-nav > li.uk-active > a {
+.uk-navbar-nav > li.uk-active > a, .uk-navbar-nav > li > a {
   color: #F9F9F9;
   font-family: Roboto;
   font-size: 1.05em; }
@@ -40,7 +36,8 @@ body.calendar {
 .button-important {
   background-color: #C9AB18;
   border-radius: 1em;
-  border: none; }
+  border: none;
+  margin-bottom: 15px; }
 
 .button-important:hover {
   background-color: #b39813;
@@ -56,7 +53,7 @@ body.calendar {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   border-radius: 1.5em;
-  border: 1px solid #474448; }
+  border: 1px solid #C9AB18; }
 
 .uk-info p {
   color: #2F3061; }
@@ -120,7 +117,8 @@ body.calendar {
   font-size: 1.05em; }
 
 hr {
-  margin: 0; }
+  margin: 0;
+  border: 0.5px solid rgba(153, 156, 233, 0.644); }
 
 .tatoo-card-buy-info {
   padding: 1%; }
@@ -149,11 +147,48 @@ hr {
   color: #F9F9F9; }
 
 .uk-input-custom {
-  border: 1.6px solid #343434; }
+  border: 1px solid #343434;
+  border-radius: 5px; }
+
+.uk-input-custom1 {
+  border-radius: 5px; }
 
 .uk-alert-danger {
   background: #aa8f94;
   color: #642430;
   border-radius: 10px; }
+
+.create-button-container {
+  background-color: #F9F9F9; }
+
+.cards-section {
+  background-color: #2F3061; }
+
+.border-radius-card {
+  border-radius: 5px; }
+
+.button-aux {
+  background-color: #36376d;
+  color: #F9F9F9;
+  border-radius: 1em;
+  border: none;
+  margin-bottom: 15px; }
+
+.button-aux:hover {
+  background-color: #5253a1;
+  color: #F9F9F9; }
+
+.fc-button-primary {
+  background-color: #C9AB18;
+  color: #F9F9F9; }
+
+.fc-button-active {
+  background-color: #8a750e !important;
+  color: #f9f9f9; }
+
+.fc-button-primary:hover {
+  color: #F9F9F9;
+  background-color: #8a750e !important;
+  border-color: #8a750e !important; }
 
 /*# sourceMappingURL=style.css.map */
