--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -22,17 +22,13 @@ body.calendar {
   
 }
 
-
-.logo{
-  width: 18%;
-  height: 75%;
-}
-
-.uk-navbar-nav>li.uk-active>a {
+.uk-navbar-nav>li.uk-active>a, .uk-navbar-nav>li>a {
   color: #F9F9F9;
   font-family: Roboto;
   font-size: 1.05em;
 }
+
+
 
 .uk-overlay-default {
   background: rgba(255,255,255,0.23)
@@ -53,6 +49,7 @@ body.calendar {
  background-color: #C9AB18;
  border-radius: 1em;
  border: none;
+ margin-bottom: 15px;
 }
 
 .button-important:hover {
@@ -72,7 +69,7 @@ body.calendar {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   border-radius: 1.5em;
-  border: 1px solid #474448;
+  border: 1px solid #C9AB18;
 }
 .uk-info p{
   color:#2F3061;
@@ -155,6 +152,7 @@ body.calendar {
 
 hr {
   margin: 0;
+  border: 0.5px solid rgba(153, 156, 233, 0.644);
 }
 
 .tatoo-card-buy-info {
@@ -195,11 +193,66 @@ hr {
 }
 
 .uk-input-custom{
-  border: 1.6px solid #343434;
+  border: 1px solid #343434;
+  border-radius: 5px;
+}
+
+.uk-input-custom1{
+  border-radius: 5px;
 }
 
 .uk-alert-danger {
   background: #aa8f94;;
   color: #642430;
   border-radius: 10px;
+}
+
+
+//Styles for profile dash
+
+.create-button-container{
+  background-color: #F9F9F9;
+}
+
+.cards-section{
+  background-color: #2F3061;
+}
+
+.border-radius-card{
+  border-radius: 5px;
+
+}
+
+
+// Buy section
+.button-aux {
+  background-color: rgb(54, 55, 109);
+  color: #F9F9F9;
+  border-radius: 1em;
+  border: none;
+  margin-bottom: 15px;
+}
+ 
+ .button-aux:hover {
+   background-color: rgb(82, 83, 161);;
+   color: #F9F9F9;
+ }
+ 
+
+
+ //calendar
+ .fc-button-primary{
+  background-color: #C9AB18;
+  color:#F9F9F9;
+ } 
+ 
+ .fc-button-active {
+  background-color: rgb(138, 117, 14) !important;
+  color: #f9f9f9;
+ }
+
+ .fc-button-primary:hover {
+  color: #F9F9F9;
+  background-color: rgb(138, 117, 14) !important;
+  border-color: rgb(138, 117, 14) !important;
 }
