--- a/views/buyTatoo.pug
+++ b/views/buyTatoo.pug
@@ -2,7 +2,7 @@ extends layout
 block content
   .uk-section
     .uk-container
-      a(href="/profile").uk-button.uk-button-default Back
+      a(href="/profile/home").uk-button.uk-button-primary.button-aux Back
       .uk-text-center(uk-grid='')
         .uk-width-3-5
           .uk-card.uk-card-default.uk-card-body
@@ -32,7 +32,7 @@ block content
                       p.authErr #{errorMessage}
                   .uk-margin
                     label(class="uk-form-label" for="body_part") Prefered Body Part
-                    select.uk-select(name="body_part")
+                    select.uk-select.uk-input-custom1(name="body_part")
                       optgroup(label="Top")
                         option(value="head") Head
                         option(value="forehead") Forehead
@@ -50,6 +50,6 @@ block content
                         option(value="hand") Hand
                         option(value="leg") Leg
                         optionv(value="ankle") Ankle 
-                button.uk-button.uk-button-default Buy
+                button.uk-button.uk-button-primary.button-important Buy
 
       
