--- a/views/editTatoo.pug
+++ b/views/editTatoo.pug
@@ -10,31 +10,31 @@ block content
               p.authErr #{errorMessage}
           .uk-margin
             label(class="uk-form-label" for="exec_time") Name
-            input.uk-input(type='text', placeholder='Name for tatoo' name="name" value=tatoo.name)
+            input.uk-input.uk-input-custom1(type='text', placeholder='Name for tatoo' name="name" value=tatoo.name)
           .uk-margin
             label(class="uk-form-label" for="price") Price
             input.uk-input(type='text', placeholder='Price' name="price" value=tatoo.price.value)
           .uk-margin
             label(class="uk-form-label" for="currency") Currency
-            select.uk-select(name="currency")
+            select.uk-select.uk-input-custom1(name="currency")
               each opt in options.currency
                 option(value=opt, selected=tatoo.price.currency === opt ? true : false)=opt
           .uk-margin
             label(class="uk-form-label" for="exec_time") Execution Time
-            select.uk-select(name="exec_time")
+            select.uk-select.uk-input-custom1(name="exec_time")
               each option in options.exec_time
                 -let auxText=''
                 -auxText = option === 1 ? "Hour" : "Hours"
                 option(value=option, selected=tatoo.exec_time === option ? true : false)=option + " " + auxText
           .uk-margin
             label(class="uk-form-label" for="size") Size
-              select.uk-select(name="size")
+              select.uk-select.uk-input-custom1(name="size")
                 each option in options.size
                   option(value=option, selected=tatoo.size === option ? true : false)=option
           .uk-margin
-            textarea.uk-textarea(id="description-text-area" rows='5', placeholder='Short description for tatoo' name="description")
+            textarea.uk-textarea.uk-input-custom1(id="description-text-area" rows='5', placeholder='Short description for tatoo' name="description")
           div
-            button.uk-button.uk-button-default(type='button', uk-toggle='target: #upload-image') Click here if you want to substitute current image
+            button.uk-button.uk-button-default(type='button', uk-toggle='target: #upload-image') Click if you want to substitute current image
             .uk-margin(uk-margin='' id="upload-image" hidden aria-hidden="true")
               div(uk-form-custom='target: true')
                 input(type='file' name="image"  uk-tooltip="Upload a substitute image")
