--- a/views/profile-artist.pug
+++ b/views/profile-artist.pug
@@ -3,8 +3,8 @@ include mixins/_card
 block content
   .uk-flex.uk-flex-right
     div.create-button-container
-      a(href="/tatoo/new" class="uk-button uk-button-primary") Create New Tatoo
-  .uk-section
+      a(href="/tatoo/new" class="uk-button uk-button-primary button-important") Create New Tatoo
+  .uk-section.cards-section
     .uk-container
       .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='')
         each tatoo in tatoos
