--- a/views/profile-fan.pug
+++ b/views/profile-fan.pug
@@ -2,7 +2,7 @@ extends layout
 include mixins/_card
 block content
 
-  .uk-section
+  .uk-section.cards-section
     .uk-container
       .uk-grid-small.uk-grid-match(class='uk-child-width-1-3@m', uk-grid='')
         each tatoo in tatoos
