Final commit, a litlle change in calendar pug

--- a/views/calendar.pug
+++ b/views/calendar.pug
@@ -39,6 +39,7 @@ html(lang="en")
       defaultDate: Date.now(),
       eventStartEditable: false,
       eventOverlap: false,
+      navLinks: true,
       //- businessHours: [ // specify an array instead
       //- {
       //-   daysOfWeek: [ 1, 2, 3 ], // Monday, Tuesday, Wednesday
